# albert

./: CMakeLists.txt
src/application/: CMakeLists.txt  albertapp.cpp  albertapp.h  history.hpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
src/application/pluginsystem/extension/: abstractobjects.hpp  extensionmanager.cpp  extensionmanager.h  iextension.h  objects.hpp  query_p.hpp
src/application/resources/ui/: HistoryTextInput.qml  MainComponent.qml
src/application/settingswidget/: propertyeditor.cpp  settingswidget.cpp  settingswidget.h  settingswidget.ui
src/plugins/: CMakeLists.txt
src/plugins/applications/: application.cpp  application.h  configwidget.cpp  desktopaction.cpp  desktopaction.h  desktopaction.hpp  desktopentry.cpp  desktopentry.h  extension.cpp  extension.h  indexer.cpp  indexer.h
src/plugins/calculator/: CMakeLists.txt  extension.cpp  extension.h
src/plugins/chromebookmarks/: bookmark.cpp  bookmark.h  extension.cpp  extension.h  indexer.cpp
src/plugins/files/: extension.cpp  file.cpp  file.h  fileactions.h  indexer.cpp
src/plugins/system/: extension.cpp  extension.h
src/plugins/templateExtension/: item.cpp  item.h
src/plugins/websearch/: extension.cpp  extension.h  searchengine.cpp  searchengine.h
src/plugins/websearch/src/: main.cpp
src/shared/iconlookup/: xdgiconlookup.cpp  xdgiconlookup.h
src/shared/search/: fuzzysearch.h  prefixsearch.h  search.cpp  search.h  search_impl.h
